--- a/app/views/pages/current-movies.html
+++ b/app/views/pages/current-movies.html
@@ -6,4 +6,148 @@
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Add Movies To Screen
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="movieName">Movie Name</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-camera-retro"></i>
+                                    </span>
+                                    <input type="text" class="form-control" id="movieName"
+                                           placeholder="Movie Name (Type to search)" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="movieLength">Length</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-film "></i>
+                                    </span>
+                                    <input type="text" class="form-control" id="movieLength"
+                                           placeholder="Displayed automatically"
+                                           required="" disabled>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="movieScreen">Screen</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-video-camera"></i>
+                                    </span>
+                                    <select class="form-control" title="Option Types" id="movieScreen">
+                                        <option>Select Screen</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="commercialBreak">Commercial Break</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-clock-o"></i>
+                                    </span>
+                                    <input type="text" class="form-control" id="commercialBreak"
+                                           placeholder="In minutes" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="cleanTime">Cleaning Time</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-clock-o" ></i>
+                                    </span>
+                                    <input type="text" class="form-control" id="cleanTime"
+                                           placeholder="In minutes" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-9">
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-6 -->
+        <div class="col-lg-6">
+            <div class="panel panel-yellow">
+                <div class="panel-heading">
+                    Future Use (Thinking)
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-6 -->
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-green">
+                <div class="panel-heading">
+                    Now Showing
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <div class="dataTable_wrapper">
+                        <table class="table table-striped table-bordered table-hover" id="movieScreenDetails">
+                            <thead>
+                            <tr>
+                                <th>
+                                    <div><center>Screen </center></br></div>
+                                </th>
+                                <th><div><center>Movie Details </center></br> <div class="movieDetails">
+                                    <div class="col-lg-3">Name </div>
+                                    <div class="col-lg-3">Start Time</div>
+                                    <div class="col-lg-3">End Time</div>
+                                    <div class="col-lg-3">Actions</div>
+                                </div></div></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="organiseScreen in organiseScreens">
+                                <td><center>{{organiseScreen.screenName}}</center></td>
+                                <td>
+                                    <div ng-repeat="data in organiseScreen.details">
+                                    <div class="col-lg-3"> {{data.movieName}}</div>
+                                    <div class="col-lg-3"> {{data.startTime}}</div>
+                                    <div class="col-lg-3"> {{data.endTime}}</div>
+                                    <div class="col-lg-3"> add remove</div>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.table-responsive -->
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
 </div>
