Completed design with sample data of UpComing movies

--- a/app/views/pages/upcoming-movies.html
+++ b/app/views/pages/upcoming-movies.html
@@ -6,4 +6,129 @@
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Add Upcoming Movies To Site
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="movieName">Movie Name</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-film"></i>
+                                    </span>
+                                    <input type="text" class="form-control" id="movieName"
+                                           placeholder="Movie Name (Type to search)" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="movieLength">Release Date </label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-calendar"></i>
+                                    </span>
+                                    <input type="text" class="form-control" id="movieLength"
+                                           placeholder="Displayed automatically"
+                                           required="" disabled>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-9">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-6 -->
+        <div class="col-lg-6">
+            <div class="panel panel-yellow">
+                <div class="panel-heading">
+                    Quick Recommendations
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body panel-height">
+                    <div class="table-responsive">
+                        <table class="table table-hover table-fixed qrScroll " >
+                            <thead>
+                            <tr>
+                                <th class="col-md-4">Movie Name</th>
+                                <th class="col-md-4">Release Date</th>
+                                <th class="col-md-4">Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr ng-repeat="upMovie in upMovies">
+                                <td class="col-md-4">{{upMovie.movieName}}</td>
+                                <td class="col-md-4">{{upMovie.releaseDate}}</td>
+                                <td class="col-md-4">
+                                    <button type="button" class="btn btn-success btn-sm">Add</button>
+                                    <button type="button" class="btn btn-danger btn-sm">Remove</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.table-responsive -->
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-6 -->
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-green">
+                <div class="panel-heading">
+                    Upcoming Movies (Displayed on Site)
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <div class="dataTable_wrapper dos-table-fixed dos-Scroll">
+                            <table class="table table-hover table-fixed table-hover dos-Scroll" >
+                                <thead>
+                                <tr>
+                                    <th class="col-md-3"> Movie Name </th>
+                                    <th class="col-md-3">  Release Date   </th>
+                                    <th class="col-md-3"> Movie Image</th>
+                                    <th class="col-md-3">  Actions </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="upMovie in upMovies">
+                                    <td class="col-md-3">{{upMovie.movieName}}</td>
+                                    <td class="col-md-3">{{upMovie.releaseDate}}</td>
+                                    <td class="col-md-3">Image</td>
+                                    <td class="col-md-3">
+                                        <button type="button" class="btn btn-primary btn-sm">Edit</button>
+                                        <button type="button" class="btn btn-danger btn-sm">Remove</button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    <!-- /.table-responsive -->
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
 </div>
