added buttons. More editing required in the now showing box.

--- a/app/views/pages/current-movies.html
+++ b/app/views/pages/current-movies.html
@@ -135,7 +135,11 @@
                                     <div class="col-lg-3"> {{data.movieName}}</div>
                                     <div class="col-lg-3"> {{data.startTime}}</div>
                                     <div class="col-lg-3"> {{data.endTime}}</div>
-                                    <div class="col-lg-3"> add remove</div>
+                                    <div class="col-lg-3"> 
+                                    <button type="button" class="btn btn-success btn-circle"><i class="fa fa-pencil-square-o"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-danger btn-circle"><i class="fa fa-times"></i>
+                                    </button>
                                     </div>
                                 </td>
                             </tr>
