--- a/app/views/pages/ticket-settings.html
+++ b/app/views/pages/ticket-settings.html
@@ -6,4 +6,123 @@
 		<!-- /.col-lg-12 -->
 	</div>
 	<!-- /.row -->
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					Set Price for tickets
+				</div>
+				<!-- /.panel-heading -->
+				<div class="panel-body">
+					<div class="dataTable_wrapper">
+						<form class="form-horizontal">
+							<div class="form-group">
+								<label for="ticketName" class="col-sm-2 control-label hor-form">Ticket Name</label>
+								<div class="col-sm-10"> <div class="input-group"><span class="input-group-addon">	<i class="fa fa-ticket"></i>
+									</span>
+									<input type="text" class="form-control" id="ticketName" placeholder="Ticket Name" required=""></div>
+								</div>
+							</div>
+
+							<div class="form-group">
+								<label for="ticketType" class="col-sm-2 control-label">Ticket Type</label>
+								<div class="col-sm-10" id="ticketType">
+									<span class="radio-inline"><input type="radio" name="gender" value="male"> 2D</span>
+									<span class="radio-inline"><input type="radio" name="gender" value="female">3D</span>
+								</div>
+							</div>
+
+							<div class="form-group">
+								<label for="ticketPrice" class="col-sm-2 control-label hor-form">Ticket Price</label>
+								<div class="col-sm-10"> <div class="input-group"><span class="input-group-addon">	<i class="fa fa-money"></i>
+									</span>
+									<input type="text" class="form-control" id="ticketPrice" placeholder="Ticket Price" required=""></div>
+								</div>
+							</div>
+
+							<div class="form-group">
+								<label for="ticketGroup" class="col-sm-2 control-label">Ticket Group</label>
+								<div class="col-sm-10" id="ticketGroup">
+									<span class="radio-inline"><input type="radio" name="gender" value="male"> Kids</span>
+									<span class="radio-inline"><input type="radio" name="gender" value="female">Adults</span>
+									<span class="radio-inline"><input type="radio" name="gender" value="other">Senior</span>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="day" class="col-sm-2 control-label">Day</label>
+								<div class="col-sm-10">
+									<select class="form-control " title="Option Types" id="day">
+										<option ng-repeat="day in days">{{day}}</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="col-sm-offset-2 col-sm-10">
+									<button type="submit" class="btn btn-primary">Submit</button>
+								</div>
+							</div>
+						</form>
+					</div>
+					<!-- /.table-responsive -->
+				</div>
+				<!-- /.panel-body -->
+			</div>
+			<!-- /.panel -->
+		</div>
+		<!-- /.col-lg-12 -->
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="panel panel-green">
+				<div class="panel-heading">
+					Current Ticket Configuration
+				</div>
+				<!-- /.panel-heading current-ticket-panel -->
+				<div class="panel-body current-ticket-panel">
+					<div class="dataTable_wrapper ">
+						<table class="table table-bordered table-hover" id="movieScreenDetails">
+							<thead>
+							<tr>
+								<th>
+									<div><center>Day </center></br></div>
+								</th>
+								<th><div><center>Ticket Details </center></br> <div class="movieDetails">
+									<div class="col-lg-2">Ticket Group </div>
+									<div class="col-lg-3">Ticket Name </div>
+									<div class="col-lg-2">2D Price</div>
+									<div class="col-lg-2">3D Price</div>
+									<div class="col-lg-3">Actions</div>
+								</div></div></th>
+							</tr>
+							</thead>
+							<tbody>
+							<tr ng-repeat="ticket in ticketConfig">
+								<td><center>{{ticket.day}}</center></td>
+								<td>
+									<div ng-repeat="ticketDetail in ticket.ticketDetails">
+										<div class="col-lg-2"> {{ticketDetail.ticketGroup}}</div>
+										<div class="col-lg-3">{{ticketDetail.ticketName}}</div>
+										<div class="col-lg-2"> {{ticketDetail.ticketPrice2D}}</div>
+										<div class="col-lg-2"> {{ticketDetail.ticketPrice3D}}</div>
+										<div class="col-lg-3">
+											<button type="button" class="btn btn-success btn-circle"><i class="fa fa-pencil-square-o"></i>
+											</button>
+											<button type="button" class="btn btn-danger btn-circle"><i class="fa fa-times"></i>
+											</button>
+										</div>
+									</div>
+								</td>
+							</tr>
+							</tbody>
+						</table>
+					</div>
+					<!-- /.table-responsive -->
+				</div>
+				<!-- /.panel-body -->
+
+			</div>
+			<!-- /.panel -->
+		</div>
+		<!-- /.col-lg-12 -->
+	</div>
 </div>
