--- a/app/views/pages/site-config.html
+++ b/app/views/pages/site-config.html
@@ -31,7 +31,7 @@
 		<div class="col-lg-7">
 			<div class="panel panel-green">
 				<div class="panel-heading">
-					Current Site Details
+					Edit Site Details
 				</div>
 				<div class="panel-body">
 					<form class="form-horizontal">
