Stareted edting dashbard page

--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -7,12 +7,9 @@
     </div>
     <!-- /.row -->
     <div class="row">
-        
-        <stats number="6" comments="New comments!" colour="primary" type="comments"></stats>
-        <stats number="12" comments="New tasks!" colour="primary" type="user"></stats>
-        <stats number="18" comments="New orders!" colour="yellow" type="shopping-cart"></stats>
-        <stats number="24" comments="Support tickets!" colour="red" type="support"></stats>
-
+        <stats number="6" comments="Total Movies Shown!" colour="primary" type="film"></stats>
+        <stats number="12" comments="Users Registered!" colour="green" type="user"></stats>
+        <stats number="18" comments="Total Tickets Sold!" colour="red" type="ticket"></stats>
     </div>
     
     <!-- /.panel -->
