--- a/app/views/pages/contact-settings.html
+++ b/app/views/pages/contact-settings.html
@@ -38,28 +38,28 @@
                             <label for="teamName" class="col-md-3 control-label hor-form">Name</label>
                             <div class="col-md-9"> <div class="input-group"><span class="input-group-addon">	<i class="fa fa-user"></i>
 									</span>
-                                <input type="text" class="form-control" id="teamName" placeholder="Contact Name" required=""></div>
+                                <input type="text" class="form-control" id="teamName" ng-model="adminContact.contactName" placeholder="Contact Name" required=""></div>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="teamEmail" class="col-md-3 control-label hor-form">Email</label>
                             <div class="col-md-9"> <div class="input-group"><span class="input-group-addon">	<i class="fa fa-envelope"></i>
 									</span>
-                                <input type="text" class="form-control" id="teamEmail" placeholder="Contact Email" required=""></div>
+                                <input type="text" class="form-control" id="teamEmail" placeholder="Contact Email" ng-model="adminContact.contactEmail" required=""></div>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="teamPhone" class="col-md-3 control-label hor-form">Phone</label>
                             <div class="col-md-9"> <div class="input-group"><span class="input-group-addon">	<i class="fa fa-phone"></i>
 									</span>
-                                <input type="text" class="form-control" id="teamPhone" placeholder="Contact Phone" required=""></div>
+                                <input type="text" class="form-control" id="teamPhone" placeholder="Contact Phone" ng-model="adminContact.contactPhone" required=""></div>
                             </div>
                         </div>
 
 
                         <div class="form-group">
                             <div class="col-md-offset-3 col-md-9">
-                                <button type="submit" class="btn btn-success">Submit</button>
+                                <button type="submit" ng-click="updateDetails()" class="btn btn-success">Update</button>
                             </div>
                         </div>
                     </form>
