--- a/app/views/pages/screen-settings.html
+++ b/app/views/pages/screen-settings.html
@@ -7,57 +7,118 @@
 	</div>
 	<!-- /.row -->
 	<div class="row">
-		<div class="col-lg-12">
-			<div class="panel panel-primary">
-				<div class="panel-heading">
-					Add Screen
-				</div>
-				<!-- /.panel-heading -->
-				<div class="panel-body">
-					<form class="form-horizontal" role="form">
-						<div class="form-group">
-							<label class="col-sm-3 control-label " for="screenName">Screen Name</label>
-							<div class="col-sm-9">
-								<div class="input-group">
+        <div class="col-lg-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Add Screen
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label " for="screenName">Screen Name</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
                                     <span class="input-group-addon">
                                         <i class="fa fa-television"></i>
                                     </span>
-									<input type="text" class="form-control" id="screenName"
-										   placeholder="Screen Name (Type to enter)" required="">
-								</div>
-							</div>
-						</div>
+                                    <input type="text" class="form-control" id="screenName"
+                                           placeholder="Screen Name (Type to enter)" ng-model="insertAdminScreen.screenName" required="">
+                                </div>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label">Screen Type</label>
                             <div class="col-sm-9">
-                                <div class="checkbox-inline"><label><input type="checkbox"> 2D</label></div>
-                                <div class="checkbox-inline"><label><input type="checkbox" checked=""> 3D</label></div>
+                                <div class="checkbox-inline">
+                                    <label>
+                                        <input type="checkbox" name="2D" ng-model="insert2D"  ng-true-value="2D" ng-false-value=""> 2D
+                                    </label>
+
+                                     </div>
+                                <div class="checkbox-inline"><label>
+                                    <input name="3D" type="checkbox" ng-model="insert3D"  ng-true-value="3D" ng-false-value=""> 3D</label>
+                                </div>
                             </div>
                         </div>
-						<div class="form-group">
-							<label class="control-label col-sm-3" for="totalSeats">Total Seats</label>
-							<div class="col-sm-9">
-								<div class="input-group">
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="totalSeats">Total Seats</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
                                     <span class="input-group-addon">
                                         <i class="fa fa-dashboard"></i>
                                     </span>
-									<input type="text" class="form-control" id="totalSeats"
-										   placeholder="Capacity (In Numbers)" required="">
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="col-sm-offset-3 col-sm-9">
-								<button type="submit" class="btn btn-primary">Submit</button>
-							</div>
-						</div>
-					</form>
-				</div>
-				<!-- /.panel-body -->
-			</div>
-			<!-- /.panel -->
-		</div>
-		<!-- /.col-lg-6 -->
+                                    <input type="text" class="form-control" ng-model="insertAdminScreen.noOfSeats" id="totalSeats"
+                                           placeholder="Capacity (In Numbers)" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-9">
+                                <button type="submit" ng-click="postAdminScreen()" class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+        <div class="col-lg-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Update Screen Details
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label " for="screenName">Screen Name</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-television"></i>
+                                    </span>
+                                    <select class="form-control" title="Option Types" ng-model="selectedUpdateScreen" id="updateScreenName"
+                                            ng-options="screenName.screenName for screenName in screenDetails"
+                                            required="">
+                                        </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Screen Type</label>
+                            <div class="col-sm-9">
+                                <div class="checkbox-inline"><label><input type="checkbox" ng-model="update2D"
+                                                                           ng-true-value="2D" ng-false-value=""> 2D</label></div>
+                                <div class="checkbox-inline"><label><input type="checkbox" ng-model="update3D"
+                                                                           ng-true-value="3D" ng-false-value=""> 3D</label></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3" for="totalSeats">Total Seats</label>
+                            <div class="col-sm-9">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-dashboard"></i>
+                                    </span>
+                                    <input type="text" class="form-control" id="updateTotalSeats" ng-model="selectedUpdateScreen.noOfSeats"
+                                           placeholder="Capacity (In Numbers)" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-9">
+                                <button type="submit" ng-click="updateDetails()" class="btn btn-primary">Update</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!-- /.panel-body -->
+            </div>
+            <!-- /.panel -->
+        </div>
+
 	</div>
     <div class="row">
         <div class="col-lg-12">
@@ -85,8 +146,8 @@
                             <tbody>
                             <tr ng-repeat="screen in screenDetails">
                                 <td><center>{{screen.screenName}}</center></td>
-                                <td><center><span ng-repeat="view in screen.screenView">{{view}}&nbsp</span></center></td>
-                                <td><center>{{screen.screenSeats}}</center></td>
+                                <td><center><span>{{screen.screenType}}</span></center></td>
+                                <td><center>{{screen.noOfSeats}}</center></td>
                             </tr>
                             </tbody>
                         </table>
